fix(impact)!: filter compiler-only bytecode changes
Move normalized SSA equivalence into ChangePoint collection, retain audit evidence, and use one common executor for all concurrent impact stages. Simplify reporting to one impact path model and update tests, contracts, user documentation, and the coding wiki.

BREAKING CHANGE: Impact diagnostics use schema 10, SSA equivalence is enabled by default, and candidate/final impact path fields are removed.